# Physically-Based-Rendering

./: .gitignore  CMakeLists.txt  README.md  render.sln
GEL/: GEL.vcxproj  GEL.vcxproj.filters  gl_wrap.h
GEL/CGLA/: ArithSqMat3x3Float.cpp
GEL/GL/: glew.c  glew.h
GEL/GLGraphics/: GLViewController.cpp  GLViewController.h  QuatTrackBall.cpp  QuatTrackBall.h  SOIL.c  SOIL.h  SimpleTrackBall.cpp  SimpleTrackBall.h  SinglePassWireframeRenderer.cpp  gel_gl.h  gel_glu.h  gel_glut.h  glsl_shader.cpp
Release/: freeglut.lib
cmake/: FindGLEW.cmake  FindMYGLUT.cmake
exercises/: 1_report.tex  report_week1.tex  report_week2.tex  report_week3.tex  report_week4.tex  report_week5.tex
models/: CornellBox.mtl  CornellLeftSphere.mtl  CornellLiquid.mtl  CornellRightSphere.mtl  bunny.mtl  glass_wine.mtl  justElephant.mtl  marble.mtl  media.mpml  plane.mtl  prism1.mtl  prism2.mtl  shl_room.mtl
optprops/: Interface.h  LorenzMie.cpp  LorenzMie.h  Medium.cpp  Medium.h  glass.cpp  glass.h  incandescent.cpp  incandescent.h  load_mpml.cpp  load_mpml.h  milk.cpp  milk.h  optprops.vcxproj  optprops.vcxproj.filters  spectrum2rgb.h  spectrum2xyz.h  sun.cpp  sun.h  water.cpp  water.h
pathtrace/: AABB.cpp  AccObj.h  Accelerator.cpp  Accelerator.h  Ambient.cpp  Ambient.h  AreaLight.cpp  AreaLight.h  BspTree.cpp  BspTree.h  Camera.h  ClassDiagram.cd  Directional.cpp  Directional.h  Emission.h  Gamma.cpp  Gamma.h  Glossy.cpp  Glossy.h  HDRTexture.cpp  HDRTexture.h  ImageCompare.cpp  ImageCompare.h  Lambertian.cpp  Lambertian.h  Light.h  MCGlossy.cpp  MCGlossy.h  MCLambertian.cpp  MCLambertian.h  MCSubsurf.cpp  MCSubsurf.h  MCVolume.cpp  MCVolume.h  Metal.cpp  Metal.h  Mirror.cpp  Mirror.h  ObjMaterial.h  ParticleTracer.cpp  (+58 more)
realtime/: AABB.h  AreaLight.cpp  AreaLight.h  Directional.cpp  Directional.h  Emission.cpp  Emission.h  EnvSphere.cpp  EnvSphere.h  Glossy.cpp  Glossy.h  HDRTexture.cpp  IndexedFaceSet.h  Lambertian.cpp  Lambertian.h  Light.h  Metal.cpp  Metal.h  Mirror.cpp  Mirror.h  Object3D.h  PointLight.cpp  PointLight.h  RadianceTransfer.cpp  RadianceTransfer.h  Randomizer.cpp  Randomizer.h  Reflectance.cpp  Reflectance.h  SHDirectional.cpp  SHDirectional.h  SHLight.cpp  SHLight.h  SHOmni.cpp  SHOmni.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Shadow.cpp  (+14 more)
